multiple moving elements; but has some issues with restricting movement to parent and element jumping away from cursor

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ a {
 }
 
 /*Test shit from interact.js*/
-#grid-snap {
+.draggable {
   width: 40px;
   height: 40px;
   background-color: #29e;
